# hedge-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.json  requirements.txt
src/: cli.py  exceptions.py
src/api/: main.py  polymarket_schemas.py  schemas.py
src/backtest/: engine.py  metrics.py  polymarket_engine.py  polymarket_metrics.py
src/data/: polymarket_provider.py  provider.py  sentiment_provider.py  whale_tracker.py  yahoo.py
src/models/: polymarket_schemas.py  schemas.py
src/strategies/: __init__.py  base.py  indicators.py  momentum.py  polymarket_arbitrage.py  polymarket_base.py  polymarket_composite.py  polymarket_momentum.py  polymarket_sentiment.py  polymarket_whale.py  rule_based.py  validator.py
tests/: conftest.py  test_cli.py
tests/fixtures/: polymarket_markets.json  polymarket_prices.json  sentiment_data.json  whale_activity.json
tests/test_api/: test_main.py  test_polymarket_endpoints.py
tests/test_backtest/: test_engine.py  test_metrics.py  test_polymarket_engine.py  test_polymarket_metrics.py
tests/test_data/: test_polymarket_provider.py  test_schemas.py  test_sentiment_provider.py  test_whale_tracker.py  test_yahoo.py
tests/test_strategies/: test_momentum.py  test_polymarket_arbitrage.py  test_polymarket_strategies.py
