[tool.poetry]
name = "hedge-ai"
version = "0.1.0"
description = "An investment platform for generating, backtesting, and paper trading stock strategies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.36"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.1.0"
numpy = "^1.26.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
hedge = "src.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
